feat: basket page copmlete without adaptive

--- a/basket.html
+++ b/basket.html
@@ -57,21 +57,24 @@
                         <div class="product-box__price___price-old opacity">51 900 ₽</div>
                      </div>
                   </div>
-                  <div class="basket_product in-cart">
-                     <img src="./assets/content/interiour-dop-2.png" alt="" class="interior_product-box__img" />
-                     <div class="basket_product__text">
-                        <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
-                        <p class="basket_product__text-subtitle">48 см</p>
-                     </div>
-                     <img src="./assets/icon/like-black.svg" alt="" />
-                     <div class="product_discont-value none">-15%</div>
-                     <div class="basket-count-buttons">
-                        <div class="basket-btn_plus"></div>
-                        <div class="basket-btn_minus"></div>
-                     </div>
-                     <div class="basket-product-price-box">
-                        <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
-                        <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                  <div class="basket-product-box hover">
+                     <input class="basket-checkbox" type="checkbox" />
+                     <div class="basket_product in-cart">
+                        <img src="./assets/content/interiour-dop-2.png" alt="" class="interior_product-box__img" />
+                        <div class="basket_product__text">
+                           <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
+                           <p class="basket_product__text-subtitle">48 см</p>
+                        </div>
+                        <img src="./assets/icon/like-black.svg" alt="" />
+                        <div class="product_discont-value none">-15%</div>
+                        <div class="basket-count-buttons">
+                           <div class="basket-btn_plus"></div>
+                           <div class="basket-btn_minus"></div>
+                        </div>
+                        <div class="basket-product-price-box">
+                           <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
+                           <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                        </div>
                      </div>
                   </div>
                   <div class="basket_product">
@@ -109,8 +112,151 @@
                      </div>
                   </div>
                </div>
+               <div class="basket-summ">
+                  <h3 class="basket_title">Сумма заказа</h3>
+                  <div class="summ-block">
+                     <p class="summ-title">Стоимость</p>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Товары × 5</p>
+                        <p class="block_row__price">66 900 <span>₽</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value coral">Скидка</p>
+                        <p class="block_row__price coral">6 000 <span>₽</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Доставка</p>
+                        <p class="block_row__price">Бесплатно<span></span></p>
+                     </div>
+                     <p class="summ-block_discr">Акция <span class="coral">«Бесплатная доставка»</span> действует при заказе от 3 000 рублей</p>
+                  </div>
+                  <div class="gray-line">
+                     <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
+                     <div class="gray-line_line-24"></div>
+                  </div>
+                  <p class="summ-title">Подарок</p>
+                  <div class="summ-block_row summ-gift">
+                     <p class="block_row__value">Свеча белая на подставке</p>
+                     <p class="block_row__price">0 <span>₽</span></p>
+                  </div>
+                  <input type="text" class="promo-imput" id="promo-imput" placeholder="Введите промокод" />
+                  <p class="product-box__price___price-old opacity total-summ-old">66 900 ₽</p>
+                  <div class="summ-block_row summ-total-row">
+                     <p class="summ-title">Итог :</p>
+                     <p class="block_row__price">60 900 <span>₽</span></p>
+                  </div>
+                  <div class="summ-checkout-btn">Оформить заказ</div>
+               </div>
             </div>
          </section>
+         <section class="section-default">
+            <h2 class="h2-section mb">Похожие товары</h2>
+            <div class="product-cards-overflow-container">
+               <div class="product-cards-container">
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Зеркало Лучи солнца</p>
+                           <p class="product-card_price">45 900 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">89 см | Золотое</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Статуэтка Икар</p>
+                           <p class="product-card_price">6 400 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">56 см | Фарфор</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="third-section-control-panel">
+               <img src="./assets/icon/Frame 482379.svg" alt="" />
+               <div class="control-panel_pag-btns">
+                  <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
+                  <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+               </div>
+            </div>
+         </section>
+         <section class="section-default section-m-50">
+            <h2 class="h2-section mb">Просмотренные товары</h2>
+         </section>
+         <div class="viewed-products-overflow-container">
+            <div class="viewed-products-container catalog-viewed">
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-1.png" alt="" />
+                  <p class="viewed-product_name">Зеркало Шахерезада 99 см Настенное</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">38 900 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none"></div>
+               </div>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
+                  <p class="viewed-product_name">Зеркало Лучи солнца 89 см Золотое</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">45 900 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none">%</div>
+               </div>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
+                  <p class="viewed-product_name">Тарелка декоративная 41 см 4 вида</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">11 500 <span>₽</span></p>
+                     <p class="viewed-product_price-sub">9200 ₽</p>
+                  </div>
+                  <div class="viewed-product_discont-value">-25%</div>
+               </div>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
+                  <p class="viewed-product_name">Лампа настольная Розовый Зефир 63 см</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">29 800 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none"></div>
+               </div>
+            </div>
+         </div>
       </main>
       <footer>
          <div class="footer_left-side">
