--- a/catalog.html
+++ b/catalog.html
@@ -286,7 +286,7 @@
             </div>
          </section>
          <section class="section-default section-m-50">
-            <h2 class="h2-section exclusive-point">Уникальные товары <br />и эксклюзив</h2>
+            <h2 class="h2-section mb exclusive-point">Уникальные товары <br />и эксклюзив</h2>
             <div class="product-cards-overflow-container-catalog">
                <div class="product-cards-container">
                   <div class="product-card">
@@ -357,7 +357,7 @@
             </div>
          </section>
          <section class="section-default section-m-50">
-            <h2 class="h2-section">Наши социальные сети</h2>
+            <h2 class="h2-section mb">Наши социальные сети</h2>
 
             <div class="social-webs-flex">
                <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-1.png)"></div>
@@ -383,7 +383,7 @@
             </div>
          </section>
          <section class="section-default section-m-50">
-            <h2 class="h2-section">Просмотренные товары</h2>
+            <h2 class="h2-section mb">Просмотренные товары</h2>
          </section>
          <div class="viewed-products-overflow-container">
             <div class="viewed-products-container catalog-viewed">
