--- a/booking.html
+++ b/booking.html
@@ -75,8 +75,20 @@
                   <div class="summ-block">
                      <p class="summ-title">Стоимость</p>
                      <div class="summ-block_row">
-                        <p class="block_row__value">Товары × 5</p>
-                        <p class="block_row__price">66 900 <span>₽</span></p>
+                        <p class="block_row__value">Зеркало Лучи солнца</p>
+                        <p class="block_row__price">45 900 <span>₽</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Интерьерная подушка в восточном стиле</p>
+                        <p class="block_row__price">3 х 4 900 <span>₽</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Свечи для романтического вечера Wax Lyrical</p>
+                        <p class="block_row__price">300 <span>₽</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Свеча белая на подставке</p>
+                        <p class="block_row__price">0 <span>₽</span></p>
                      </div>
                      <div class="summ-block_row">
                         <p class="block_row__value coral">Скидка</p>
