feat: cabinet <tab - profile> will complete

--- a/cabinet.html
+++ b/cabinet.html
@@ -36,6 +36,11 @@
             </div>
             <h1 class="title-home title-no-home">Личный кабинет</h1>
             <div class="basket-zone">
+               <div class="cabinet-tabs">
+                  <p class="cabinet-tab active">Профиль</p>
+                  <p class="cabinet-tab">Заказы</p>
+                  <p class="cabinet-tab">Бонусы</p>
+               </div>
                <div class="basket">
                   <h3 class="basket_title">Ваш профиль</h3>
                   <form class="booking-form" action="">
@@ -79,119 +84,52 @@
                   </div>
                </div>
                <div class="basket-summ">
-                  <h3 class="basket_title">Сумма заказа</h3>
-                  <div class="summ-block">
-                     <p class="summ-title">Стоимость</p>
+                  <h3 class="basket_title">Ваш кешбэк</h3>
+                  <div class="cashback-listener">
+                     <div class="cashback-listener_values">
+                        <p>0<span>%</span></p>
+                        <p class="bold">3<span>%</span></p>
+                        <p>8<span>%</span></p>
+                        <p>12<span>%</span></p>
+                     </div>
+                     <div class="cashback-listener_level">
+                        <div class="cashback_level__status-bar"></div>
+                     </div>
+                  </div>
+                  <div class="bonus-card" style="background-image: url(./assets/icon/bonus-card.svg)">
+                     <p class="bonus-card_value">Кешбэк 3<span>%</span></p>
+                     <p class="bonus-card_name">Konstantin К.</p>
+                  </div>
+                  <div class="cabinet-block">
+                     <p class="summ-title">Статистика</p>
                      <div class="summ-block_row">
-                        <p class="block_row__value">Зеркало Лучи солнца</p>
-                        <p class="block_row__price">45 900 <span>₽</span></p>
+                        <p class="block_row__value">Заказы</p>
+                        <p class="block_row__price">5 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
-                        <p class="block_row__value">Интерьерная подушка в восточном стиле</p>
-                        <p class="block_row__price">3 х 4 900 <span>₽</span></p>
+                        <p class="block_row__value">Товары</p>
+                        <p class="block_row__price">9 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
-                        <p class="block_row__value">Свечи для романтического вечера Wax Lyrical</p>
-                        <p class="block_row__price">300 <span>₽</span></p>
+                        <p class="block_row__value">Подарки</p>
+                        <p class="block_row__price">1 <span>шт.</span></p>
                      </div>
-                     <div class="summ-block_row">
-                        <p class="block_row__value">Свеча белая на подставке</p>
-                        <p class="block_row__price">0 <span>₽</span></p>
-                     </div>
-                     <div class="summ-block_row">
-                        <p class="block_row__value coral">Скидка</p>
-                        <p class="block_row__price coral">6 000 <span>₽</span></p>
-                     </div>
-                     <div class="summ-block_row">
-                        <p class="block_row__value">Доставка</p>
-                        <p class="block_row__price">Бесплатно<span></span></p>
-                     </div>
-                     <p class="summ-block_discr">Акция <span class="coral">«Бесплатная доставка»</span> действует при заказе от 3 000 рублей</p>
                   </div>
                   <div class="gray-line">
                      <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
                      <div class="gray-line_line-24"></div>
                   </div>
-                  <p class="summ-title">Подарок</p>
-                  <div class="summ-block_row summ-gift">
-                     <p class="block_row__value">Свеча белая на подставке</p>
-                     <p class="block_row__price">0 <span>₽</span></p>
-                  </div>
-                  <input type="text" class="promo-imput" id="promo-imput" placeholder="Введите промокод" />
-                  <p class="product-box__price___price-old opacity total-summ-old">66 900 ₽</p>
+
+                  <p class="product-box__price___price-old opacity total-summ-old">186 900 ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price">60 900 <span>₽</span></p>
+                     <p class="block_row__price">147 880 <span>₽</span></p>
                   </div>
-                  <div class="summ-checkout-btn">Оформить заказ</div>
+                  <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" alt="" /></p>
                </div>
             </div>
          </section>
-         <section class="section-default">
-            <h2 class="h2-section mb">Похожие товары</h2>
-            <div class="product-cards-overflow-container">
-               <div class="product-cards-container">
-                  <div class="product-card">
-                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
-                     </div>
-                     <div class="product-card_discription">
-                        <div class="product-card_top-discr">
-                           <p class="product-card_name">Стекляная ваза Braun</p>
-                           <p class="product-card_price">16 800 <span>₽</span></p>
-                        </div>
-                        <div class="product-card_subdiscr">36 см | Настольная</div>
-                     </div>
-                  </div>
 
-                  <div class="product-card">
-                     <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
-                     </div>
-                     <div class="product-card_discription">
-                        <div class="product-card_top-discr">
-                           <p class="product-card_name">Зеркало Лучи солнца</p>
-                           <p class="product-card_price">45 900 <span>₽</span></p>
-                        </div>
-                        <div class="product-card_subdiscr">89 см | Золотое</div>
-                     </div>
-                  </div>
-
-                  <div class="product-card">
-                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
-                     </div>
-                     <div class="product-card_discription">
-                        <div class="product-card_top-discr">
-                           <p class="product-card_name">Статуэтка Икар</p>
-                           <p class="product-card_price">6 400 <span>₽</span></p>
-                        </div>
-                        <div class="product-card_subdiscr">56 см | Фарфор</div>
-                     </div>
-                  </div>
-
-                  <div class="product-card">
-                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
-                     </div>
-                     <div class="product-card_discription">
-                        <div class="product-card_top-discr">
-                           <p class="product-card_name">Стекляная ваза Braun</p>
-                           <p class="product-card_price">16 800 <span>₽</span></p>
-                        </div>
-                        <div class="product-card_subdiscr">36 см | Настольная</div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="third-section-control-panel">
-               <img src="./assets/icon/Frame 482379.svg" alt="" />
-               <div class="control-panel_pag-btns">
-                  <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
-                  <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
-               </div>
-            </div>
-         </section>
          <section class="section-default section-m-50">
             <h2 class="h2-section mb">Просмотренные товары</h2>
          </section>
@@ -318,4 +256,5 @@
       </footer>
    </body>
    <script src="./js/booking.js"></script>
+   <script src="./js/cabinet-tabs.js"></script>
 </html>
