--- a/cabinet.html
+++ b/cabinet.html
@@ -35,12 +35,12 @@
                <span>:</span>
             </div>
             <h1 class="title-home title-no-home">Личный кабинет</h1>
-            <div class="basket-zone">
-               <div class="cabinet-tabs">
-                  <p class="cabinet-tab active">Профиль</p>
-                  <p class="cabinet-tab">Заказы</p>
-                  <p class="cabinet-tab">Бонусы</p>
-               </div>
+            <div class="cabinet-tabs">
+               <p class="cabinet-tab active">Профиль</p>
+               <p class="cabinet-tab">Заказы</p>
+               <p class="cabinet-tab">Бонусы</p>
+            </div>
+            <div class="cabinet-zone cabinet-tab-1 none">
                <div class="basket">
                   <h3 class="basket_title">Ваш профиль</h3>
                   <form class="booking-form" action="">
@@ -82,6 +82,131 @@
                      <div class="cabinet-change-btn">Редактировать данные</div>
                      <div class="cabinet-change-pass-btn">Изменить пароль</div>
                   </div>
+               </div>
+               <div class="basket-summ">
+                  <h3 class="basket_title">Ваш кешбэк</h3>
+                  <div class="cashback-listener">
+                     <div class="cashback-listener_values">
+                        <p>0<span>%</span></p>
+                        <p class="bold">3<span>%</span></p>
+                        <p>8<span>%</span></p>
+                        <p>12<span>%</span></p>
+                     </div>
+                     <div class="cashback-listener_level">
+                        <div class="cashback_level__status-bar"></div>
+                     </div>
+                  </div>
+                  <div class="bonus-card" style="background-image: url(./assets/icon/bonus-card.svg)">
+                     <p class="bonus-card_value">Кешбэк 3<span>%</span></p>
+                     <p class="bonus-card_name">Konstantin К.</p>
+                  </div>
+                  <div class="cabinet-block">
+                     <p class="summ-title">Статистика</p>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Заказы</p>
+                        <p class="block_row__price">5 <span>шт.</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Товары</p>
+                        <p class="block_row__price">9 <span>шт.</span></p>
+                     </div>
+                     <div class="summ-block_row">
+                        <p class="block_row__value">Подарки</p>
+                        <p class="block_row__price">1 <span>шт.</span></p>
+                     </div>
+                  </div>
+                  <div class="gray-line">
+                     <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
+                     <div class="gray-line_line-24"></div>
+                  </div>
+
+                  <p class="product-box__price___price-old opacity total-summ-old">186 900 ₽</p>
+                  <div class="summ-block_row summ-total-row">
+                     <p class="summ-title">Итог :</p>
+                     <p class="block_row__price">147 880 <span>₽</span></p>
+                  </div>
+                  <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" alt="" /></p>
+               </div>
+            </div>
+            <div class="cabinet-zone cabinet-tab-2">
+               <div class="orders">
+                  <h3 class="basket_title">Список ваших заказов</h3>
+                  <div class="orders-tabs">
+                     <p class="orders-tab active">Все</p>
+                     <p class="orders-tab">Выполнен</p>
+                     <p class="orders-tab">Отменен</p>
+                     <p class="orders-tab">Возврат</p>
+                     <p class="orders-tab">Не оформлен</p>
+                     <p class="orders-tab">Оплачен</p>
+                     <p class="orders-tab">Выполняется</p>
+                  </div>
+                  <div class="orders-period">
+                     <input type="date" id="order-period-start" />
+                     <input type="date" id="order-period-end" />
+                     <img src="./assets/icon/coral-search.svg" alt="" />
+                  </div>
+                  <ul class="order-list">
+                     <li class="order-list-item-1">Заказы</li>
+                     <li class="order-list-item-2">Кол-во</li>
+                     <li class="order-list-item-3">Стоимость</li>
+                     <li class="order-list-item-4">Рубли</li>
+                     <li class="order-list-item-5">Статус</li>
+                     <li class="order-list-item-6">События</li>
+                     <li class="order-list-item-7">Дата операции</li>
+                  </ul>
+                  <div class="gray-line">
+                     <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
+                     <div class="gray-line_line-24"></div>
+                  </div>
+                  <div class="orders-data">
+                     <ul class="order-item">
+                        <li class="order-list-item-1">№ 200285 77 90</li>
+                        <li class="order-list-item-2">× 5</li>
+                        <li class="order-list-item-3">60 900</li>
+                        <li class="order-list-item-4">₽</li>
+                        <li class="order-list-item-5">Выполняется</li>
+                        <li class="order-list-item-6"><img src="./assets/icon/Danger-blk.svg" alt="" />Доставка заказа 12.01.2024</li>
+                        <li class="order-list-item-7">10.01.2024</li>
+                     </ul>
+                     <ul class="order-item">
+                        <li class="order-list-item-1">№ 200285 77 90</li>
+                        <li class="order-list-item-2">× 1</li>
+                        <li class="order-list-item-3">900</li>
+                        <li class="order-list-item-4">₽</li>
+                        <li class="order-list-item-5">Выполнен</li>
+                        <li class="order-list-item-6"><img src="./assets/icon/Danger-coral.svg" alt="" /> Возврат № 73272 от 19.07.2023</li>
+                        <li class="order-list-item-7">08.07.2023</li>
+                     </ul>
+                     <ul class="order-item">
+                        <li class="order-list-item-1">№ 200285 77 90</li>
+                        <li class="order-list-item-2">× 2</li>
+                        <li class="order-list-item-3">77 980</li>
+                        <li class="order-list-item-4">₽</li>
+                        <li class="order-list-item-5 coral">Отменен</li>
+                        <li class="order-list-item-6"></li>
+                        <li class="order-list-item-7">02.04.2023</li>
+                     </ul>
+                     <ul class="order-item">
+                        <li class="order-list-item-1">№ 200285 77 90</li>
+                        <li class="order-list-item-2">× 1</li>
+                        <li class="order-list-item-3">2 100</li>
+                        <li class="order-list-item-4">₽</li>
+                        <li class="order-list-item-5">Выполнен</li>
+                        <li class="order-list-item-6"></li>
+                        <li class="order-list-item-7">16.02.2023</li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <div class="cabinet-zone cabinet-tab-3 none">
+               <div class="cabinet">
+                  <h3 class="basket_title">Как работает бонусная система</h3>
+                  <p class="bonus-info-subt">Вы получаете кешбэк с каждой покупки</p>
+                  <p class="bonus-info-disc">Уже с первой покупки вы получаете 3% кешбэк на свой бонусный счет. Ими можно оплатить до 50% суммы следующей покупки.</p>
+                  <p class="bonus-info-subt">Действует эффект накопления</p>
+                  <p class="bonus-info-disc">
+                     Все ваши покупки суммируются. Когда накапливается 30 000 ₽, то кешбэк увеличивается до 5%, при сумме 60 000 ₽ — кешбэк будет уже 8%. При сумме 150.000 ₽  — 12%
+                  </p>
                </div>
                <div class="basket-summ">
                   <h3 class="basket_title">Ваш кешбэк</h3>
