feat: create button functional for show/hide burger menu in desktop

--- a/basket.html
+++ b/basket.html
@@ -12,7 +12,7 @@
    <body>
       <header class="product-header">
          <nav class="home-nav-menu">
-            <div class="burger-btn">
+            <div class="burger-btn" onclick="toggleMenu()">
                <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
             </div>
             <div class="logo-icon">
@@ -28,7 +28,7 @@
          <nav class="burger-nav-menu">
             <!-- mt112 -->
             <nav class="home-nav-menu">
-               <div class="burger-btn">
+               <div class="burger-btn" onclick="toggleMenu()">
                   <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
                </div>
                <div class="logo-icon">
@@ -405,4 +405,5 @@
       </footer>
    </body>
    <script src="./js/product.js"></script>
+   <script src="./js/nav-menu.js"></script>
 </html>
