feat: update all pages -> get nav menu and burher show/hide functional

--- a/cabinet.html
+++ b/cabinet.html
@@ -12,7 +12,7 @@
    <body>
       <header class="product-header">
          <nav class="home-nav-menu">
-            <div class="burger-btn">
+            <div class="burger-btn" onclick="toggleMenu()">
                <img class="svg-class pointer" src="./assets/icon/nav-btn-dark.svg" alt="" />
             </div>
             <div class="logo-icon">
@@ -24,6 +24,71 @@
                <li><img src="./assets/icon/nav-3-dark.svg" alt="" class="pointer" /></li>
                <li><img src="./assets/icon/nav-4-dark.svg" alt="" class="pointer" /></li>
             </ul>
+         </nav>
+         <nav class="burger-nav-menu">
+            <!-- mt112 -->
+            <nav class="home-nav-menu">
+               <div class="burger-btn" onclick="toggleMenu()">
+                  <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+               </div>
+               <div class="logo-icon">
+                  <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
+               </div>
+               <ul class="nav-buttons">
+                  <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
+               </ul>
+            </nav>
+            <div class="hidden-nav-menu">
+               <ul class="nav-list">
+                  <li class="nav-list-title"><a href="">Каталог</a></li>
+                  <li class="nav-list-list pointer"><a href="">Часы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Зеркала</a></li>
+                  <li class="nav-list-list pointer"><a href="">Вазы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Картины и Панно</a></li>
+                  <li class="nav-list-list pointer"><a href="">Декор</a></li>
+               </ul>
+
+               <ul class="nav-list">
+                  <li class="nav-list-title"><a href="">Компания</a></li>
+                  <li class="nav-list-list pointer"><a href="">О нас</a></li>
+                  <li class="nav-list-list pointer"><a href="">Сотрудничество</a></li>
+                  <li class="nav-list-list pointer"><a href="">Проект для Вас</a></li>
+                  <li class="nav-list-list pointer"><a href="">Вакансии</a></li>
+               </ul>
+               <ul class="nav-list">
+                  <li class="nav-list-title"><a href="">Покупателям</a></li>
+                  <li class="nav-list-list pointer"><a href="">Часы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Зеркала</a></li>
+                  <li class="nav-list-list pointer"><a href="">Вазы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Картины</a></li>
+                  <li class="nav-list-list pointer"><a href="">Декор</a></li>
+                  <li class="nav-list-list pointer"><a href="">Новости</a></li>
+                  <li class="nav-list-list pointer"><a href="">Отзывы</a></li>
+               </ul>
+               <ul class="nav-list">
+                  <li class="nav-list-title"><a href="">Обратная связь</a></li>
+                  <li class="nav-list-list pointer"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
+                  <li class="nav-list-list pointer"><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
+                  <ul class="nav-list_social-list">
+                     <li>
+                        <a href=""><img src="./assets/icon/whatsupp-black.svg" alt="" /></a>
+                     </li>
+                     <li>
+                        <a href=""><img src="./assets/icon/telegram-black.svg" alt="" /></a>
+                     </li>
+                     <li>
+                        <a href=""><img src="./assets/icon/instagram-black.svg" alt="" /></a>
+                     </li>
+                     <li>
+                        <a href=""><img src="./assets/icon/vk-black.svg" alt="" /></a>
+                     </li>
+                  </ul>
+                  <li class="nav-list-list pointer"><a href="">Написать нам</a></li>
+               </ul>
+            </div>
          </nav>
       </header>
       <main>
@@ -381,5 +446,6 @@
       </footer>
    </body>
    <script src="./js/booking.js"></script>
+   <script src="./js/nav-menu.js"></script>
    <script src="./js/cabinet-tabs.js"></script>
 </html>
